# microbiomedb-mcp

./: .env.example  .gitignore  README.md  docker-compose.yml  environment.yml  pyproject.toml
docker/mcp/: Dockerfile
docker/proxy/: Caddyfile
docker/rserve/: Dockerfile  Rserv.conf  startup.R
docker/rserve/R/: mcp_handlers.R  mcp_imports.R  mcp_jobs.R
scripts/: smoke.py
src/microbiomedb_mcp/: __init__.py  _ctx.py  config.py  rserve_client.py  schemas.py  server.py  sessions.py
src/microbiomedb_mcp/tools/: __init__.py  compute.py  discovery.py  imports.py  jobs.py  results.py  session.py
tests/python/: test_rserve_client_unit.py  test_session_manager_unit.py
tests/testthat/: test-handlers.R
