[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "microbiomedb-mcp"
version = "0.1.0"
description = "MCP server exposing MicrobiomeDB R analyses over Rserve."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Danielle Callan", email = "dcallan@upenn.edu" },
]

dependencies = [
  "mcp>=1.6.0",
  "pyRserve>=1.0.4",
  "pydantic>=2.7",
  "anyio>=4.4",
  "uvicorn>=0.30",
  "starlette>=0.37",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
microbiomedb-mcp = "microbiomedb_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/microbiomedb_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/python"]
